Update HTML boilerplate example and structure
Replaced the previous container example with a full HTML5 boilerplate code snippet and added a heading for clarity. This provides a more comprehensive starting point for users looking for a basic HTML template.

--- a/Basic HTML/boilerplate.html
+++ b/Basic HTML/boilerplate.html
@@ -13,14 +13,27 @@
     </p>
     <p>
         Remember to include any additional resources like CSS or JavaScript files as needed. Happy coding!</p>
+   
+   
 
-        <pre><code>
-&lt;div class="container"&gt;
-  &lt;p&gt;Hello World&lt;/p&gt;
-&lt;/div&gt;
-</code></pre>
-    <div class="container">
-        <p>Hello World</p>      
+    <h1>Here is the Boilerplate of a html page</h1>
+   
+   <pre>
+<code>
+&lt;!DOCTYPE html&gt;
+&lt;html lang="en"&gt;
+&lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+    &lt;title&gt;Your title goes here&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+    &lt;!-- Your content goes here --&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+</code>
+   </pre>
+   
     <footer>
         <p>&copy; 2025 hydradocs</p> 
     </footer>
