Button added and the css file is updated

--- a/Server/Contents/SOURCES/portfolio.html
+++ b/Server/Contents/SOURCES/portfolio.html
@@ -50,6 +50,9 @@
 
         
     </div>
+    <div class="button">
+        <button><a href="">NEXT</a></button>
+    </div>
 
     <footer>
         <p>&copy; 2024 My Portfolio</p>
