--- a/Server/Contents/SOURCES/portfolio.html
+++ b/Server/Contents/SOURCES/portfolio.html
@@ -51,11 +51,16 @@
         
     </div>
     <div class="button">
-        <button><a href="">NEXT</a></button>
+        <button class="btn1"><a href="#">NEXT</a></button>
+        <br>
+        <div class="btn-2c">
+
+            <button class="btn2"><a href="#">View Source Code</a></button>
+        </div>
     </div>
 
     <footer>
-        <p>&copy; 2024 My Portfolio</p>
+        <p>&copy; 2025 My Portfolio ❤ ~ hydradocs</p>
     </footer>
 </body>
 </html>
